fix: save resume to pdf spacing

--- a/src/styles/pages/_cv.scss
+++ b/src/styles/pages/_cv.scss
@@ -17,6 +17,7 @@
 
       h3 {
         display: block;
+        margin: 0;
       }
     }
   }
